// Vitest Snapshot v1

exports[`extract 2`] = `
{
  "blocks": {
    "default": [
      {
        "blockType": "interactive",
        "blocks": undefined,
        "childKey": null,
        "content": {
          "colorTheme": "none",
        },
        "editorName": "default",
        "files": [],
        "id": "1",
        "media": [],
        "meta": {
          "browsers": {
            "interactive": [
              1,
            ],
          },
        },
        "position": 1,
        "relatedItems": [
          {
            "browserName": "interactive",
            "id": "1",
            "meta": undefined,
            "position": 1,
            "related": {
              "blocks": undefined,
              "createdAt": "2022-08-08T22:22:24.000000Z",
              "displayTitle": "Interactive module",
              "files": undefined,
              "id": "1",
              "media": undefined,
              "meta": undefined,
              "published": true,
              "title": "Interactive module",
              "type": "interactives",
              "updatedAt": "2022-08-08T22:25:12.000000Z",
            },
            "type": "related-items",
          },
        ],
        "type": "blocks",
      },
      {
        "blockType": "text",
        "blocks": undefined,
        "childKey": null,
        "content": {
          "colorTheme": "dark-gray",
          "text": "<p>Incididunt qui duis elit ut et proident esse ullamco id dolor. Id esse fugiat est consectetur excepteur proident ex ullamco anim. Incididunt aliquip consequat labore ipsum esse. Officia irure consequat quis non labore eiusmod esse ea mollit eiusmod occaecat do culpa.</p>",
        },
        "editorName": "default",
        "files": [],
        "id": "2",
        "media": [],
        "meta": {
          "browsers": null,
        },
        "position": 2,
        "relatedItems": [],
        "type": "blocks",
      },
      {
        "blockType": "images",
        "blocks": undefined,
        "childKey": null,
        "content": {
          "body": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quam morbi lectus nunc, nam tellus sed porttitor nunc. Urna neque purus eget id ut eu aenean feugiat diam.",
          "colorTheme": "dark-gray",
          "display": "image-right",
          "title": "Images",
        },
        "editorName": "default",
        "files": [],
        "id": "3",
        "media": [
          {
            "alt": "test-image",
            "caption": "",
            "createdAt": "2022-11-21T15:32:08.000000Z",
            "crop": "default",
            "filename": "test-image.png",
            "height": 1486,
            "id": "1",
            "lqip": null,
            "meta": {
              "crop": "default",
              "role": "images",
              "uuid": "f2bdab3c-2e04-4318-b0eb-7d86b71aa1ec/test-image.png",
            },
            "metadata": [],
            "originalSrc": "https://twill.test/storage/uploads/f2bdab3c-2e04-4318-b0eb-7d86b71aa1ec/test-image.png",
            "ratio": "default",
            "role": "images",
            "src": "https://twill.test/img/f2bdab3c-2e04-4318-b0eb-7d86b71aa1ec/test-image.png?fm=jpg&q=80&fit=max&crop=1485%2C1486%2C46%2C0",
            "type": "media",
            "updatedAt": "2022-11-21T15:32:08.000000Z",
            "uuid": "f2bdab3c-2e04-4318-b0eb-7d86b71aa1ec/test-image.png",
            "video": "",
            "width": 1485,
          },
        ],
        "meta": {
          "browsers": null,
        },
        "position": 3,
        "relatedItems": [],
        "type": "blocks",
      },
    ],
  },
  "files": {},
}
`;

exports[`extract 3`] = `
[
  {
    "blocks": {
      "default": [
        {
          "blockType": "interactive",
          "blocks": undefined,
          "childKey": null,
          "content": {
            "colorTheme": "none",
          },
          "editorName": "default",
          "files": {},
          "id": "1",
          "media": {},
          "meta": {
            "browsers": {
              "interactive": [
                1,
              ],
            },
          },
          "position": 1,
          "relatedItems": {
            "interactive": [
              {
                "blocks": undefined,
                "createdAt": "2022-08-08T22:22:24.000000Z",
                "displayTitle": "Interactive module",
                "files": undefined,
                "id": "1",
                "media": undefined,
                "meta": undefined,
                "published": true,
                "title": "Interactive module",
                "type": "interactives",
                "updatedAt": "2022-08-08T22:25:12.000000Z",
              },
            ],
          },
          "type": "blocks",
        },
        {
          "blockType": "text",
          "blocks": undefined,
          "childKey": null,
          "content": {
            "colorTheme": "dark-gray",
            "text": "<p>Incididunt qui duis elit ut et proident esse ullamco id dolor. Id esse fugiat est consectetur excepteur proident ex ullamco anim. Incididunt aliquip consequat labore ipsum esse. Officia irure consequat quis non labore eiusmod esse ea mollit eiusmod occaecat do culpa.</p>",
          },
          "editorName": "default",
          "files": {},
          "id": "2",
          "media": {},
          "meta": {
            "browsers": null,
          },
          "position": 2,
          "relatedItems": {},
          "type": "blocks",
        },
        {
          "blockType": "images",
          "blocks": undefined,
          "childKey": null,
          "content": {
            "body": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quam morbi lectus nunc, nam tellus sed porttitor nunc. Urna neque purus eget id ut eu aenean feugiat diam.",
            "colorTheme": "dark-gray",
            "display": "image-right",
            "title": "Images",
          },
          "editorName": "default",
          "files": {},
          "id": "3",
          "media": {
            "images": [
              {
                "default": {
                  "alt": "test-image",
                  "caption": "",
                  "createdAt": "2022-11-21T15:32:08.000000Z",
                  "crop": "default",
                  "filename": "test-image.png",
                  "height": 1486,
                  "id": "1",
                  "lqip": null,
                  "meta": {
                    "crop": "default",
                    "role": "images",
                    "uuid": "f2bdab3c-2e04-4318-b0eb-7d86b71aa1ec/test-image.png",
                  },
                  "metadata": [],
                  "originalSrc": "https://twill.test/storage/uploads/f2bdab3c-2e04-4318-b0eb-7d86b71aa1ec/test-image.png",
                  "ratio": "default",
                  "role": "images",
                  "src": "https://twill.test/img/f2bdab3c-2e04-4318-b0eb-7d86b71aa1ec/test-image.png?fm=jpg&q=80&fit=max&crop=1485%2C1486%2C46%2C0",
                  "type": "media",
                  "updatedAt": "2022-11-21T15:32:08.000000Z",
                  "uuid": "f2bdab3c-2e04-4318-b0eb-7d86b71aa1ec/test-image.png",
                  "video": "",
                  "width": 1485,
                },
              },
            ],
          },
          "meta": {
            "browsers": null,
          },
          "position": 3,
          "relatedItems": {},
          "type": "blocks",
        },
      ],
    },
    "colorTheme": "light-gray",
    "description": "Ipsum sunt culpa occaecat Lorem aute proident eu aliquip id. Qui aute consequat et sit irure velit magna. Cupidatat tempor commodo qui aute adipisicing adipisicing tempor commodo occaecat laborum irure deserunt. Ullamco quis enim et amet ex fugiat exercitation.",
    "files": {},
    "hero": {
      "assetType": "video",
      "blendMode": "default",
    },
    "id": "1",
    "media": undefined,
    "meta": undefined,
    "pies": undefined,
    "published": true,
    "slug": "page-slug",
    "title": "Lorem ipsum dolor sit amet",
    "type": "pages",
  },
]
`;
